@@ -55,7 +55,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(m4)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.112 $)
+AC_REVISION($Revision: 1.113 $)
 AC_COPYRIGHT([Copyright (c) 1997-2005 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -189,8 +189,10 @@ AC_PROG_INSTALL
 dnl the next two are run or supported natively by libtool
 dnl AC_PROG_LN_S
 dnl AC_PROG_RANLIB
-AC_PROG_YACC
-AM_PROG_LEX
+dnl AC_PROG_YACC
+AMU_PROG_YACC
+dnl AM_PROG_LEX
+AMU_PROG_LEX
 
 dnl ======================================================================
 dnl Generic Program Checks
